--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
     "node-sass": "^4.14.1",
+    "plotly.js": "1.55.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-plotly.js": "2.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
