--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-plotly.js": "2.4.0",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^4.4.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
